--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "co-monk": "^1.0.0",
     "koa": "^0.16.0",
     "koa-route": "^2.4.0"
+  },
+  "devDependencies": {
+    "co": "^4.1.0",
+    "mocha": "^2.1.0",
+    "supertest": "^0.15.0"
   }
 }
